hot fix vertical align

--- a/src/sections/About/about.module.css
+++ b/src/sections/About/about.module.css
@@ -6,6 +6,10 @@
   width: 65%;
   margin: auto;
   padding-top: 6rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .content h1 {
@@ -21,6 +25,7 @@
 .skillsContainer {
   width: 40vw;
   background-color: #fefefe;
+  border: 1px solid var(--secondary-color);
   margin: 3rem auto;
   padding: 1rem;
   border-radius: 10px;
